[package]
name = "Eventhandler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.16"
tungstenite = "0.15"
url = "2.2"
ethers = { version = "2.0", features = ["ws"] }
eyre = "0.6"
postgres = "0.19.7"
dotenv = "0.15.0"
